unpackaged/main/default/objects/SubscriptionChurnEvent__c/SubscriptionChurnEvent__c.object-meta.xml
<CustomObject>
    <label>Subscription Churn Event</label>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Subscription Churn Event Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Churn Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>