unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Subscription Churn Events</relationshipLabel>
    <relationshipName>Subscription_Churn_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>