unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Account_executive_churn__c.field-meta.xml
<CustomField>
    <fullName>Account_executive_churn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Churn_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>