unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The owner of the account at the point of churn.</description>
    <inlineHelpText>The owner of the account at the point of churn.</inlineHelpText>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Churn_Events</relationshipName>
    <type>Lookup</type>
</CustomField>