unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Churn_Risk_Stage_at_Point_of_Churn__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Stage_at_Point_of_Churn__c</fullName>
    <label>Account Stage at Point of Churn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Churn_Risk_Stage</valueSetName>
    </valueSet>
</CustomField>