unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Covid_related__c.field-meta.xml
<CustomField>
    <fullName>Covid_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covid Related</label>
    <type>Checkbox</type>
</CustomField>