unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Date_of_churn__c.field-meta.xml
<CustomField>
    <fullName>Date_of_churn__c</fullName>
    <label>Date of Churn</label>
    <required>true</required>
    <type>Date</type>
</CustomField>