unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Initial_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Purchase_Date__c</fullName>
    <label>Initial Purchase Date</label>
    <type>Date</type>
</CustomField>