unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/MRR_loss__c.field-meta.xml
<CustomField>
    <fullName>MRR_loss__c</fullName>
    <label>MRR Loss</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>