unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Positive_sentiment_will_resubscribe__c.field-meta.xml
<CustomField>
    <fullName>Positive_sentiment_will_resubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Positive Sentiment / Will Resubscribe</label>
    <type>Checkbox</type>
</CustomField>