unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Product_notes__c.field-meta.xml
<CustomField>
    <fullName>Product_notes__c</fullName>
    <label>Product Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>