unpackaged/main/default/objects/SubscriptionChurnEvent__c/fields/Sales_engineer_churn__c.field-meta.xml
<CustomField>
    <fullName>Sales_engineer_churn__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Subscription_Churn_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>