unpackaged/main/default/objects/SubscriptionChurnEvent__c/validationRules/Notes_must_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Notes_must_not_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Notes__c) = 0</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>The Notes field must be completed</errorMessage>
</ValidationRule>