unpackaged/main/default/objects/SubscriptionChurnEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_of_churn__c</columns>
    <columns>Account__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MRR_loss__c</columns>
    <columns>Product__c</columns>
    <columns>Type__c</columns>
    <columns>Covid_related__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>